<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="recorder.recorder.activities.LoginActivity"
    tools:layout_editor_absoluteY="81dp">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/colorGrey"
        app:layout_constraintBottom_toTopOf="parent" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/round_edges_edit_text"
        android:hint="@string/email"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/round_edges_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.159" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.152" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:indeterminate="true"
        android:max="100"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:src="@mipmap/rtilogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        android:contentDescription="@string/rti_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>
